[package]
name = "candle-qwen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
candle-core = {version = "0.10.2"}
candle-nn = {version = "0.10.2"}
candle-transformers = "0.10.2"
clap = {version = "4.6.1", features = ["derive"]}
env = "1.0.1"
hf-hub = "0.5.0"
serde = "1.0.228"
tokenizers = "0.22.2"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.23"
